assert(((ABS(iv_adjustment_in_bytes) % elt_size) == 0)) fails in superword.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b64

        Four tests fail with the following error message:

        # Internal Error (/opt/jprt/T/P1/193649.vkozlov/s/hotspot/src/share/vm/opto/superword.cpp:495), pid=28553, tid=3245341552
        # assert(((ABS(iv_adjustment_in_bytes) % elt_size) == 0)) failed: (4) should be divisible by (8)

        The problem might be related to the recent changes by JDK-8026049, but more investigation is needed to confirm/deny that.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Zoltan Majo (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: