8076523: assert(((ABS(iv_adjustment_in_bytes) % elt_size) == 0)) fails in superword.cpp

Check that offset % mem_oper_size == 0 when alignment is verified during vectorization.

Reviewed-by: iveresov